--- a/web/appraisal/templates/appraisal/realestate_annex.html
+++ b/web/appraisal/templates/appraisal/realestate_annex.html
@@ -1,146 +1,221 @@
-<div class="card-body">
+<div class="row mt-4 ml-4 mr-4">
+  <div class="col">
 
-    <div class="card mb-2">
+<h5>Fotografías</h5>
+
+<!-- Form to insert a picture -->
+<div class="row">
+
+  <div class="col-md-4">
+    <div class="card mr-2 mb-2 rounded-0">
+      <button type="button" class="btn btn-dark btn-block rounded-0 border-0 photo_show" data-category="1" style="padding: 30% 0;">
+        Agregar imagen
+      </button>
       <div class="card-body">
-        <h5 class="card-title">Fotografías</h5>
-
-        {% if not appraisal.finished %}
-        <!-- Form to insert a picture -->
-        <div class="form-group row mb-4">
-          <div class="col-md-4">
-            <div class="custom-file">
-              {{forms.photos.photos}}
-              <label class="custom-file-label" for="validatedCustomFile">Seleccionar archivo</label>
-            </div>
+        <input name="photo_description_{{photo.id}}" class="form-control form-control-sm in_description" style="display:none;">
+        <div class="row">
+          <div class="col text-left">
+            <p class="card-title description mb-0">
+              Emplazamiento
+            </p>
           </div>
-          <div class="col-md-4">
-            {{forms.photos.description}}
-          </div>
-          <div class="col-md">
-            <button name='btn_upload_photo' class="btn btn-primary">Agregar foto</button>
-          </div>
-        </div>
-
-        <script>
-          $('#id_photos').change(function() {
-            if ($('#id_photos')[0].files.length == 1) {
-              var file = $('#id_photos')[0].files[0].name;
-              $('.custom-file-label').text(file);
-            }
-          });
-        </script>
-        {% endif %}
-
-        <!-- Gallery -->
-        <div class="container-fluid">
-          <div class="row">
-            {% for photo in appraisal.photos.all %}
-            <div class="card mr-2 mb-2" style="width: 16rem;">
-              <a class="photo_show" data-url="{{photo.photo.url}}" data-id="{{photo.id}}">
-                <img class="card-img-top" src="{{settings.MEDIA_ROOT}}{{photo.thumbnail.url}}"/>
-              </a>
-              <div class="card-body">
-                <input name="photo_description_{{photo.id}}" class="form-control form-control-sm in_description" style="display:none;">
-                <p class="card-title description">
-                  {{photo.description}}
-                </p>
-                <p class="card-text" style="text-align:right">
-                  <a class="btn btn-sm photo_show" data-url="{{photo.photo.url}}" data-id="{{photo.id}}">
-                    <i class="material-icons">zoom_in</i>
-                  </a>
-                  {% if not appraisal.finished %}
-                  <button type="button" class="btn btn-sm edit_photo" style="padding:0px; border:0px;">
-                    <i class="material-icons">edit</i>
-                  </button>
-                  <button name="btn_save_photo" value="{{photo.id}}" class="btn btn-sm save_photo" style="padding:0px; border:0px; display:none;">
-                    <i class="material-icons">save</i>
-                  </button>
-                  <button name="btn_delete_photo" value="{{photo.id}}" class="btn btn-sm" style="padding:0px; border:0px;">
-                    <i class="material-icons">delete</i>
-                  </button>
-                  {% endif %}
-                </p>
-              </div>
-            </div>
-            {% endfor %}
+          <div class="col text-right">
+            <button name="btn_delete_photo" value="{{photo.id}}" class="btn btn-sm" style="padding:0px; border:0px;">
+              <i class="material-icons">delete</i>
+            </button>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="card">
+  <div class="col-md-4">
+    <div class="card mr-2 mb-2 rounded-0">
+      <button type="button" class="btn btn-dark btn-block rounded-0 border-0" data-toggle="modal" data-target="#modalPhoto" style="padding: 30% 0;">
+        Agregar imagen
+      </button>
       <div class="card-body">
-        <h5 class="card-title">Documentos</h5>
-
-        <!-- Form to insert a document -->
-        {% if not appraisal.finished %}
-        <div class="form-group row mb-4">
-          <div class="col-md-4">
-            <div class="custom-file">
-              {{forms.documents.documents}}
-              <label class="custom-file-label" for="validatedCustomFile">Seleccionar archivo</label>
-            </div>
+        <input name="photo_description_{{photo.id}}" class="form-control form-control-sm in_description" style="display:none;">
+        <div class="row">
+          <div class="col text-left">
+            <p class="card-title description mb-0">
+              Fachada
+            </p>
           </div>
-          <div class="col-md-4">
-            {{forms.documents.description}}
-          </div>
-          <div class="col-md">
-            <button name='btn_upload_document' class="btn btn-primary">Agregar documento</button>
-          </div>
-        </div>
-
-        <script>
-          $('#id_documents').change(function() {
-            //var i = $(this).prev('label').clone();
-            var filesn = $('#id_documents')[0].files.length
-            if (filesn == 1) {
-              var file = $('#id_documents')[0].files[0].name;
-              $('.custom-file-label').text(file);
-            } else {
-              $('.custom-file-label').text(filesn+' archivos');
-            }
-          });
-        </script>
-        {% endif %}
-
-        <!-- Documents -->
-        <div class="container-fluid">
-          <div class="row">
-            {% for document in appraisal.documents.all %}
-            <div class="card mr-2 mb-2" style="width: 16rem;">
-              <a class="document_show" data-url="{{document.photo.url}}" data-id="{{document.id}}">
-                <img class="card-img-top" src="{{settings.MEDIA_ROOT}}{{document.thumbnail.url}}"/>
-              </a>
-              <div class="card-body">
-                <input name="document_description_{{document.id}}" class="form-control form-control-sm in_description" style="display:none;">
-                <p class="card-title description">
-                  {{document.description}}
-                </p>
-                <p class="card-text" style="text-align:right">
-                  <a class="btn btn-sm document_show" data-url="{{document.document.url}}" data-id="{{document.id}}">
-                    <i class="material-icons">zoom_in</i>
-                  </a>
-                  {% if not appraisal.finished %}
-                  <button type="button" class="btn btn-sm edit_document" style="padding:0px; border:0px;">
-                    <i class="material-icons">edit</i>
-                  </button>
-                  <button name="btn_save_document" value="{{document.id}}" class="btn btn-sm save_document" style="padding:0px; border:0px; display:none;">
-                    <i class="material-icons">save</i>
-                  </button>
-                  <button name="btn_delete_document" value="{{document.id}}" class="btn btn-sm" style="padding:0px; border:0px;">
-                    <i class="material-icons">delete</i>
-                  </button>
-                  {% endif %}
-                </p>
-              </div>
-            </div>
-            {% endfor %}
+          <div class="col text-right">
+            <button name="btn_delete_photo" value="{{photo.id}}" class="btn btn-sm" style="padding:0px; border:0px;">
+              <i class="material-icons">delete</i>
+            </button>
           </div>
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="card mr-2 mb-2 rounded-0">
+      <button class="btn btn-dark btn-block rounded-0 border-0" style="padding: 30% 0;">
+        Agregar imagen
+      </button>
+      <div class="card-body">
+        <input name="photo_description_{{photo.id}}" class="form-control form-control-sm in_description" style="display:none;">
+        <div class="row">
+          <div class="col text-left">
+            <p class="card-title description mb-0">
+              Interior
+            </p>
+          </div>
+          <div class="col text-right">
+            <button name="btn_delete_photo" value="{{photo.id}}" class="btn btn-sm" style="padding:0px; border:0px;">
+              <i class="material-icons">delete</i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--
+  <div class="col-md-4">
+    <div class="card mr-2 mb-2">
+      <a class="photo_show" data-url="{{photo.photo.url}}" data-id="{{photo.id}}">
+        <img class="card-img-top" src="{{settings.MEDIA_ROOT}}{{photo.thumbnail.url}}"/>
+      </a>
+      <div class="card-body">
+        <input name="photo_description_{{photo.id}}" class="form-control form-control-sm in_description" style="display:none;">
+        <p class="card-title description">
+          Emplazamiento
+        </p>
+        <p class="card-text" style="text-align:right">
+          <a class="btn btn-sm photo_show" data-url="{{photo.photo.url}}" data-id="{{photo.id}}">
+            <i class="material-icons">zoom_in</i>
+          </a>
+          {% if not appraisal.finished %}
+          <button type="button" class="btn btn-sm edit_photo" style="padding:0px; border:0px;">
+            <i class="material-icons">edit</i>
+          </button>
+          <button name="btn_save_photo" value="{{photo.id}}" class="btn btn-sm save_photo" style="padding:0px; border:0px; display:none;">
+            <i class="material-icons">save</i>
+          </button>
+          <button name="btn_delete_photo" value="{{photo.id}}" class="btn btn-sm" style="padding:0px; border:0px;">
+            <i class="material-icons">delete</i>
+          </button>
+          {% endif %}
+        </p>
+      </div>
+    </div>
+  </div>
+  -->
 
 </div>
+
+  <!-- Gallery -->
+  <div class="container-fluid">
+    <div class="row">
+      {% for photo in appraisal.photos.all %}
+      <div class="card mr-2 mb-2" style="width: 16rem;">
+        <a class="photo_show" data-url="{{photo.photo.url}}" data-id="{{photo.id}}">
+          <img class="card-img-top" src="{{settings.MEDIA_ROOT}}{{photo.thumbnail.url}}"/>
+        </a>
+        <div class="card-body">
+          <input name="photo_description_{{photo.id}}" class="form-control form-control-sm in_description" style="display:none;">
+          <p class="card-title description">
+            {{photo.description}}
+          </p>
+          <p class="card-text" style="text-align:right">
+            <a class="btn btn-sm photo_show" data-url="{{photo.photo.url}}" data-id="{{photo.id}}">
+              <i class="material-icons">zoom_in</i>
+            </a>
+            {% if not appraisal.finished %}
+            <button type="button" class="btn btn-sm edit_photo" style="padding:0px; border:0px;">
+              <i class="material-icons">edit</i>
+            </button>
+            <button name="btn_save_photo" value="{{photo.id}}" class="btn btn-sm save_photo" style="padding:0px; border:0px; display:none;">
+              <i class="material-icons">save</i>
+            </button>
+            <button name="btn_delete_photo" value="{{photo.id}}" class="btn btn-sm" style="padding:0px; border:0px;">
+              <i class="material-icons">delete</i>
+            </button>
+            {% endif %}
+          </p>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+
+</div>
+</div>
+
+
+<h5>Documentos</h5>
+
+<!-- Form to insert a document -->
+{% if not appraisal.finished %}
+<div class="form-group row mb-4">
+  <div class="col-md-4">
+    <div class="custom-file">
+      {{forms.documents.documents}}
+      <label class="custom-file-label" for="validatedCustomFile">Seleccionar archivo</label>
+    </div>
+  </div>
+  <div class="col-md-4">
+    {{forms.documents.description}}
+  </div>
+  <div class="col-md">
+    <button name='btn_upload_document' class="btn btn-primary">Agregar documento</button>
+  </div>
+</div>
+
+<script>
+  $('#id_documents').change(function() {
+    //var i = $(this).prev('label').clone();
+    var filesn = $('#id_documents')[0].files.length
+    if (filesn == 1) {
+      var file = $('#id_documents')[0].files[0].name;
+      $('.custom-file-label').text(file);
+    } else {
+      $('.custom-file-label').text(filesn+' archivos');
+    }
+  });
+</script>
+{% endif %}
+
+<!-- Documents -->
+<div class="container-fluid">
+  <div class="row">
+    {% for document in appraisal.documents.all %}
+    <div class="card mr-2 mb-2" style="width: 16rem;">
+      <a class="document_show" data-url="{{document.photo.url}}" data-id="{{document.id}}">
+        <img class="card-img-top" src="{{settings.MEDIA_ROOT}}{{document.thumbnail.url}}"/>
+      </a>
+      <div class="card-body">
+        <input name="document_description_{{document.id}}" class="form-control form-control-sm in_description" style="display:none;">
+        <p class="card-title description">
+          {{document.description}}
+        </p>
+        <p class="card-text" style="text-align:right">
+          <a class="btn btn-sm document_show" data-url="{{document.document.url}}" data-id="{{document.id}}">
+            <i class="material-icons">zoom_in</i>
+          </a>
+          {% if not appraisal.finished %}
+          <button type="button" class="btn btn-sm edit_document" style="padding:0px; border:0px;">
+            <i class="material-icons">edit</i>
+          </button>
+          <button name="btn_save_document" value="{{document.id}}" class="btn btn-sm save_document" style="padding:0px; border:0px; display:none;">
+            <i class="material-icons">save</i>
+          </button>
+          <button name="btn_delete_document" value="{{document.id}}" class="btn btn-sm" style="padding:0px; border:0px;">
+            <i class="material-icons">delete</i>
+          </button>
+          {% endif %}
+        </p>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+
 
 <script>
 // Example starter JavaScript for disabling form submissions if there are invalid fields
@@ -198,6 +273,13 @@
   $(document).on('click','.photo_show',function(){
       var url = $(this).data('url');
       var id = $(this).data('id');
+      var cat = $(this).data('category');
+      $('#modal_photo').modal().show();
+      if (cat != '-1') {
+        select = $('#modal_photo').find('#id_category');
+        select.val(cat);
+        select.prop('disabled',true);
+      }
       $.ajax({
           url:'',
           type:'POST',
@@ -207,16 +289,40 @@
               'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val(),
           },
           success:function(data){
-              console.log(id)
               $('#photo').attr("src",url);
               $('#photo_id').val(id);
-              $('#modalPhoto').modal('show');
           },
           error:function(){
               console.log('error')
           },
       });
   });
+
+  $(document).on('click','#btn_upload_photo',function() {
+    var url = "{% url 'ajax_upload_photo_url' %}";
+    var form = document.getElementById('form');
+    console.log(form)
+    var form_data = new FormData(form);
+    btn = $(this);
+    btn.addClass('running');
+    btn.prop('disabled', true);
+    console.log(form_data)
+    $.ajax({
+      url: url,
+      type: 'post',
+      data: form_data,
+      processData: false,
+      contentType: false,
+      error: function(){
+        console.log('error')
+      },
+      success: function(data) {
+        btn.removeClass('running');
+        btn.prop('disabled', false);
+        console.log('a')
+      }
+    });
+  })
 
   $(document).on('click','.document_show',function(){
       var url = $(this).data('url');
