--- a/web/appraisal/templates/appraisal/realestate_general.html
+++ b/web/appraisal/templates/appraisal/realestate_general.html
@@ -98,8 +98,6 @@
     </div>
   </div>
 
-  <hr/>
-
   <div class="row">
     <div class="col-2">
       <p class="font-weight-bold text-right">Ejecutivo</p>
@@ -110,7 +108,11 @@
         {{forms.appraisal.solicitanteEjecutivo}}
       </div>
     </div>
+  </div>
+  <div class="row">
     <div class="col-2">
+    </div>
+    <div class="col-4">
       <div class="form-group">
         <label>Email</label>
         {{forms.appraisal.solicitanteEjecutivoEmail}}
@@ -169,13 +171,13 @@
     <div class="col-4">
       <div class="form-group">
         <label>Nombre</label>
-        {{forms.appraisal.propietario}}
+        {{forms.appraisal.contacto}}
       </div>
     </div>
     <div class="col-2">
       <div class="form-group">
         <label>Rut</label>
-        {{forms.appraisal.propietarioRut}}
+        {{forms.appraisal.contactoRut}}
       </div>
     </div>
   </div>
@@ -185,13 +187,13 @@
     <div class="col-4">
       <div class="form-group">
         <label>Email</label>
-        {{forms.appraisal.propietarioEmail}}
+        {{forms.appraisal.contactoEmail}}
       </div>
     </div>
     <div class="col-2">
       <div class="form-group">
         <label>Telefono</label>
-        {{forms.appraisal.propietarioTelefono}}
+        {{forms.appraisal.contactoTelefono}}
       </div>
     </div>
   </div>
