--- a/web/user/templates/user/login.html
+++ b/web/user/templates/user/login.html
@@ -11,7 +11,7 @@
 <div class="jumbotron">
   <div class="row">
     <div class="col-md-8">
-      <h1 class="mt">Necesita estar registrado para ver esta página</h1>
+    <h1 class="mt-4" style="padding:10% 0;">Necesita ingresar para ver esta página</h1>
     </div>
     <div class="col-md-4">
       {% include "login_form.html" %}
