--- a/web/main/templates/main/logbook.html
+++ b/web/main/templates/main/logbook.html
@@ -1,36 +1,168 @@
 {% load custom_tags %}
-{% for comment in comments %}
-{% has_notification_comment request.user comment.id as hnc %}
-{% if hnc %}
-<div class="card mb-1 border-primary border-3" id="comment_{{comment.id}}">
-{% else %}
-<div class="card mb-1" id="comment_{{comment.id}}">
-{% endif %}
-  <div class="card-header">
-    <div class="row">
-      <div class="col-7">
-        <p style="margin-bottom:0em;">
-          <span class="badge badge-secondary" style="font-size: 1em;">{{comment.get_event_display}}</span>
-          {{comment.user.first_name}} {{comment.user.last_name}}
-        </p>
-      </div>
-      <div class="col-5 text-right">
-        <small>{{comment.timeCreated}}</small>
-        {% if request.user|has_group:"asignador" or user.is_superuser %} 
-        <button type="button" data-appraisal-id={{appraisal.id}} data-delete-comment-url="{% url 'ajax_delete_comment_url' %}" data-id="{{comment.id}}" class="btn btn-dark btn-sm delete_comment ml-3" style="
-        padding-top:0em;
-        padding-bottom:0em;
-        font-family:Material Icons;font-size:1.0em;margin-bottom:1px;border:0px;">
-          delete
-        </button>
-        {% endif %}
-      </div>
+
+  <h6> Contactos </h6>
+  <div class="row mt-4" style="font-size:0.8em;">
+    <div class="col-2">
+      <p class="text-right"><em>Ejecutivo/a</em></p>
+    </div>
+    <div class="col-10">
+      <p>
+      {% if appraisal.solicitanteEjecutivo %}
+      {{ appraisal.solicitanteEjecutivo }},
+      {% if appraisal.solicitanteEjecutivoEmail %}
+      <a href="mailto:{{appraisal.solicitanteEjecutivoEmail}}">{{appraisal.solicitanteEjecutivoEmail}}</a>,
+      {% else %}
+      -, 
+      {% endif %}
+      {% if appraisal.solicitanteEjecutivoTelefono %}
+      {{ appraisal.solicitanteEjecutivoTelefono }}
+      {% else %}
+      -
+      {% endif %}
+      {% else %}
+      No hay información
+      {% endif %}
+      </p>
+    </div>
+    <div class="col-2">
+      <p class="text-right"><em>Cliente</em></p>
+    </div>
+    <div class="col-10">
+      <p>
+      {% if appraisal.cliente %}
+      {{ appraisal.cliente }},
+      {% if appraisal.clienteEmail %}
+      <a href="mailto:{{appraisal.solicitanteEjecutivoEmail}}">{{appraisal.clienteEmail}}</a>,
+      {% else %}
+      -, 
+      {% endif %}
+      {% if appraisal.clienteTelefono %}
+      {{ appraisal.clienteTelefono }}
+      {% else %}
+      -
+      {% endif %}
+      {% else %}
+      No hay información
+      {% endif %}
+      </p>
+    </div>
+    <div class="col-2">
+      <p class="text-right"><em>Contacto</em></p>
+    </div>
+    <div class="col-10">
+      <p>
+      {% if appraisal.contacto %}
+      {{ appraisal.contacto }},
+      {% if appraisal.contactoEmail %}
+      <a href="mailto:{{appraisal.solicitanteEjecutivoEmail}}">{{appraisal.contactoEmail}}</a>,
+      {% else %}
+      -, 
+      {% endif %}
+      {% if appraisal.contactoTelefono %}
+      {{ appraisal.contactoTelefono }}
+      {% else %}
+      -
+      {% endif %}
+      {% else %}
+      No hay información
+      {% endif %}
+      </p>
+    </div>
+    <div class="col-2">
+      <p class="text-right"><em>Propietario/a</em></p>
+    </div>
+    <div class="col-10">
+      <p>
+      {% if appraisal.propietario %}
+      {{ appraisal.propietario }},
+      {% if appraisal.propietarioEmail %}
+      <a href="mailto:{{appraisal.solicitanteEjecutivoEmail}}">{{appraisal.propietarioEmail}}</a>,
+      {% else %}
+      -, 
+      {% endif %}
+      {% if appraisal.propietarioTelefono %}
+      {{ appraisal.propietarioTelefono }}
+      {% else %}
+      -
+      {% endif %}
+      {% else %}
+      No hay información
+      {% endif %}
+      </p>
     </div>
   </div>
-  {% if comment.hasText %}
-  <div class="card-body">
-    <small>{{comment.text}}</small>
+
+  <hr/>
+
+  <div class="row">
+    <div class="col-12">
+
+      <form id="form_comment" data-comment-url="{% url 'ajax_comment_url' %}">
+
+        {% csrf_token %}
+        <input id="in_appraisal_id" name="appraisal_id" type="hidden" value=-1>
+        <div class="form-group">
+          {{ form_comment.event.label_tag}}
+          {{ form_comment.event }}
+        </div>
+        <div class="form-group">
+          {{ form_comment.text.label_tag }}
+          {{ form_comment.text }}
+        </div>
+        <div class="form-group row">
+          <div class="col-12">
+            <button class="btn btn-dark btn-block" name="btn_comment" id="comment">Comentar</button>
+          </div>
+        </div>
+      </form>
+
+      <hr/>
+
+      <div id="loading" class="mb-3 col-lg-12" style="display:none;">
+        <div class="row">
+          <div class="col-5"></div>
+          <div class="col-2">
+            <div class="col loader"></div>
+          </div>
+          <div class="col-5"></div>
+        </div>
+      </div>
+
+      <div id="historial">
+
+        <ul class="list-group list-group-flush">
+        {% for comment in comments %}
+        {% has_notification_comment request.user comment.id as hnc %}
+        {% if hnc %}
+        <li class="list-group-item list-group-item-primary" id="comment_{{comment.id}}">
+        {% else %}
+        <li class="list-group-item" id="comment_{{comment.id}}">
+        {% endif %}
+          <div class="row">
+            <div class="col-10">
+              <span class="badge badge-secondary" style="padding-top: 0.5em; padding-bottom: 0.5em; padding-left: 1.0em; padding-right: 1.0em;font-size: 1em; font-weight: 200;">{{comment.get_event_display}}</span>
+              {{comment.user.first_name}} {{comment.user.last_name}}
+              <small>{{comment.timeCreated}}</small>
+              {% if request.user|has_group:"asignador" or user.is_superuser %} 
+            </div>
+            <div class="col-2 text-right">
+              <button type="button" data-appraisal-id={{appraisal.id}} data-delete-comment-url="{% url 'ajax_delete_comment_url' %}" data-id="  {{comment.id}}" class="btn btn-dark btn-sm delete_comment ml-3" style="
+                padding-top:0em;
+                padding-bottom:0em;
+                font-family:Material Icons;font-size:1.0em;margin-bottom:1px;border:0px;">
+                delete
+              </button>
+            </div>
+          </div>
+          {% endif %}
+          {% if comment.hasText %}
+          <p class="mb-0 mt-2 ml-2">{{comment.text}}</p>
+          {% endif %}
+        </li>
+        {% endfor %}
+        </ul>
+
+      </div>
+
+    </div>
   </div>
-  {% endif %}
-</div>
-{% endfor %}
