--- a/web/main/templates/main/appraisals.html
+++ b/web/main/templates/main/appraisals.html
@@ -85,6 +85,20 @@
   </div>
 </div>
 
+<!-- IMPORTED -->
+
+<div class="card mb-4" id="div_imported" style="font-size:0.9em;">
+  <div class="card-body">
+    <h5 class="card-title">Tasaciones importadas</h5>
+    <div class="alert alert-primary" role="alert" id="div_alert_imported" style="display: none;">
+      No hay tasaciones importadas
+    </div>
+    <table class="table table-sm table-borderless" id="table_imported" style="display: none;">
+      {% include 'main/appraisals_imported.html' %}
+    </table>
+  </div>
+</div>
+
 </div>
 
 {% include "main/modals.html" %}
@@ -450,6 +464,13 @@
       $("#table_finished").toggle()
     } else {
       $("#div_alert_finished").toggle()
+    }
+
+    appraisals_imported_n = {{appraisals_imported|length}}
+    if (appraisals_imported_n > 0) {
+      $("#table_imported").toggle()
+    } else {
+      $("#div_alert_imported").toggle()
     }
 
     // Tooltips.
